feat: Add confirmPayment and sendAdminNotification functions in order service
